# iop

./: .pre-commit-config.yaml  IMPROVEMENT_RECOMMENDATIONS.md  README.md  cache.py  cli.py  config.yaml  executor.py  install-linux.sh  install-mac.sh  install-win.bat  iop.py  mypy.ini  openrouter.py  prompt.py  prompt.txt  pyproject.toml  requirements.txt  terragon-setup.sh  utils.py
.github/workflows/: ci.yml
tests/: test_cli_integration.py  test_executor.py  test_iop.py  test_openrouter.py  test_utils.py
